--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.32.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0"
   }
 }
